# taskai

./: .gitignore  DEVLOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
migrations/: _001_removing_lists.py  convert_title_to_name.py
scripts/: .bump_version.py.swo  bump_version.py
taskai/: api.py  auth.py  cli.py  config.py  database_old.py  help_menu.py  json_dir_database.py  models.py  telegram_dm.py  views.py
taskai/services/: ai.py  pomodoro.py  repair_database.py  user_setup.py
test/: test_cli.py  test_execution.py  test_json_dir_database.py  test_view.py
