[project]
name = "taskai"
version = "0.1.0"
description = ""
authors = [{name = "Alex Paskal", email = "alexcpaskal@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmodel>=0.0.38",
    "fastapi>=0.136.3",
    "psycopg2-binary>=2.9.12",
    "uvicorn>=0.48.0",
    "loguru>=0.7.3",
    "rich>=15.0.0",
    "requests>=2.34.2",
    "click>=8.4.1",
    "bcrypt>=5.0.0",
    "orjson>=3.11.9",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "google-genai>=2.8.0"
]

[project.scripts]
task = "taskai.cli:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["taskai"]