[project]
name = "taskai-cli"
version = "1.1.5"
description = ""
authors = [{name = "Alex Paskal", email = "alexcpaskal@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.13",
    "rich>=15",
    "orjson>=3.11",
    "google-genai>=2.8"
]

[project.scripts]
task = "taskai.cli:entry_point"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["taskai"]
